--- a/docs/services/en/worldwide-ecu-tcu-tuning-solutions.mdx
+++ b/docs/services/en/worldwide-ecu-tcu-tuning-solutions.mdx
@@ -1,4 +1,4 @@
-export const meta = {
+export const metadata = {
     title: 'Worldwide ECU/TCU Tuning Solutions',
     thumbnail: '/projects/blue-b5-300hp',
     description: 'We specialize in delivering top-notch, personalized ECU (Engine Control Unit) and TCU (Transmission Control Unit) tuning services for your vehicle, ensuring that your car\'s performance is optimized to its fullest potential.'
