--- a/docs/services/en/cutting-edge products.mdx
+++ b/docs/services/en/cutting-edge products.mdx
@@ -1,7 +1,7 @@
-export const meta = {
-    title: 'Tailored Solutions for Engines',
+export const metadata = {
+    title: 'Cutting Edge Products',
     thumbnail: '/projects/blue-b5-300hp',
-    description: 'We specialize in creating custom-tuned engines that match each vehicle\'s unique needs. Understanding that every engine is different, we focus on making specific changes to improve its performance.'
+    description: 'We make special car parts just for you, no matter what car brands we work with. Our team focuses on creating items like exhaust manifolds, intercoolers, flanges, and ethanol-based products, all designed to suit your specific needs.'
 }
 
 We make special car parts just for you, no matter what car brands we work with. Our team focuses on creating items like exhaust manifolds, intercoolers, flanges, and ethanol-based products, all designed to suit your specific needs.
