feat: add example services contents

--- a/docs/services/en/cutting-edge products.mdx
+++ b/docs/services/en/cutting-edge products.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
     title: 'Cutting Edge Products',
-    thumbnail: '/projects/blue-b5-300hp',
+    thumbnail: '/images/services/cutting-edge-products.jpg',
     description: 'We make special car parts just for you, no matter what car brands we work with. Our team focuses on creating items like exhaust manifolds, intercoolers, flanges, and ethanol-based products, all designed to suit your specific needs.'
 }
 
