--- a/docs/services/en/tailored-solutions-for-engines.mdx
+++ b/docs/services/en/tailored-solutions-for-engines.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
     title: 'Tailored Solutions for Engines',
-    thumbnail: '/projects/blue-b5-300hp',
+    thumbnail: '/images/services/engine-build.jpg',
     description: 'We specialize in creating custom-tuned engines that match each vehicle\'s unique needs. Understanding that every engine is different, we focus on making specific changes to improve its performance.'
 }
 
