--- a/docs/services/en/worldwide-ecu-tcu-tuning-solutions.mdx
+++ b/docs/services/en/worldwide-ecu-tcu-tuning-solutions.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
     title: 'Worldwide ECU/TCU Tuning Solutions',
-    thumbnail: '/projects/blue-b5-300hp',
+    thumbnail: '/images/services/worldwide-ecu-tcu-tuning.jpg',
     description: 'We specialize in delivering top-notch, personalized ECU (Engine Control Unit) and TCU (Transmission Control Unit) tuning services for your vehicle, ensuring that your car\'s performance is optimized to its fullest potential.'
 }
 
